Fix widget URL - force update

--- a/widget.html
+++ b/widget.html
@@ -319,7 +319,7 @@
     </div>
 
     <script>
-        const GWEN_API_URL = 'http://localhost:3000';
+        const GWEN_API_URL = 'https://mint-outdoor-gwen-ai-75ac6bacdb2a.herokuapp.com';
         const sessionId = 'widget_' + Math.random().toString(36).substr(2, 9) + '_' + Date.now();
         
         const chatButton = document.getElementById('gwenChatButton');
