--- a/widget.html
+++ b/widget.html
@@ -160,11 +160,11 @@ body {
 .gwen-bubble {
     padding: 18px 22px;
     border-radius: 12px;
-    word-wrap: break-word; /* Keep for compatibility */
-    overflow-wrap: break-word; /* Modern wrapping for long words */
-    word-break: break-all; /* Break very long strings (e.g., URLs) */
-    white-space: normal; /* Ensure normal wrapping behavior */
-    hyphens: auto; /* Optional: Auto-hyphenate for better readability */
+    word-wrap: break-word; /* Legacy support */
+    overflow-wrap: break-word; /* Break long words at line end */
+    word-break: break-word; /* Changed from break-all to break-word */
+    white-space: normal; /* Normal wrapping at spaces */
+    hyphens: auto; /* Auto-hyphenate for better breaks */
     line-height: 1.6;
     font-size: 16px;
     font-weight: 400;
@@ -274,6 +274,7 @@ body {
         padding: 16px;
         -webkit-overflow-scrolling: touch; /* Smooth scroll */
         padding-bottom: calc(env(safe-area-inset-bottom) + 100px); /* Extra for keyboard */
+        overflow-x: hidden; /* No horizontal scroll */
     }
     .gwen-input-area {
         padding: 12px 16px;
@@ -285,6 +286,7 @@ body {
     }
     .gwen-chat-window {
         height: 100dvh; /* Full dynamic viewport */
+        overflow-x: hidden; /* Global prevention */
     }
 }
 
